--- a/addon/templates/components/editor-plugins/wikipedia-slug-card.hbs
+++ b/addon/templates/components/editor-plugins/wikipedia-slug-card.hbs
@@ -1,5 +1,6 @@
 <p class="u-spacer--tiny">{{info.label}} <br>
-  <strong>Do you want to insert a link to {{get options 0}} ?</strong>
+  {{!-- TODO: ask the user if he wants to replace the word by a link to wikipedia,--}}
+  {{!-- You should use the ember get helper --}}
 </p>
 
 {{#wu-button-group}}
