--- a/addon/templates/components/editor-plugins/wikipedia-slug-card.hbs
+++ b/addon/templates/components/editor-plugins/wikipedia-slug-card.hbs
@@ -1,6 +1,6 @@
 <p class="u-spacer--tiny">{{info.label}} <br>
   {{!-- TODO: ask the user if he wants to replace the word by a link to wikipedia,--}}
-  {{!-- You should use the ember get helper --}}
+  {{!-- You should use the ember get helper that has the following structure {{get array index}} --}}
 </p>
 
 {{#wu-button-group}}
