--- a/addon/components/editor-plugins/wikipedia-slug-card.hbs
+++ b/addon/components/editor-plugins/wikipedia-slug-card.hbs
@@ -1,6 +1,6 @@
 <div class="modal-dialog__content">
   <p class="u-spacer--tiny">
-    {{info.label}}
+    Our wikipedia insertion
     <br>
     <strong>Do you want to insert a link to {{get options 0}}?</strong>
   </p>
