--- a/addon/components/editor-plugins/wikipedia-slug-card.hbs
+++ b/addon/components/editor-plugins/wikipedia-slug-card.hbs
@@ -7,7 +7,7 @@
 </div>
 <div class="modal-dialog__footer">
   <WuButtonGroup>
-    <WuButton @label="Yes" @size="small" @isNarrow={{true}} @commandLocation="below" @onClick={{action "insert"}} />
+    <WuButton @label="Yes" @size="small" @isNarrow={{true}} @commandLocation="below" @onClick={{this.insert}} />
   </WuButtonGroup>
 
   {{yield}}
