Give the hint card a clearer name
The name of the hint card used to be passed through.  That made it
unclear where it was going to go and so it wasn't apparent that the
title wasn't exactly what the title should have been.  Easy to fix
with better code cohesion.

--- a/addon/components/editor-plugins/wikipedia-slug-card.hbs
+++ b/addon/components/editor-plugins/wikipedia-slug-card.hbs
@@ -1,6 +1,6 @@
 <div class="modal-dialog__content">
   <p class="u-spacer--tiny">
-    Our wikipedia insertion
+    Wikipedia link hint
     <br>
     <strong>Do you want to insert a link to {{get options 0}}?</strong>
   </p>
