Add loading state to hint card
When we're too fast to accept a hint, the card does not insert the
correct link.  This change introduces a simple variable to indicate if
we are in a loading state.

--- a/addon/components/editor-plugins/wikipedia-slug-card.hbs
+++ b/addon/components/editor-plugins/wikipedia-slug-card.hbs
@@ -2,7 +2,11 @@
   <p class="u-spacer--tiny">
     Wikipedia link hint
     <br>
-    <strong>Do you want to insert a link to {{get options 0}}?</strong>
+    {{#if this.loading}}
+      <br><strong>...looking up articles...</strong>
+    {{else}}
+      <strong>Do you want to insert a link to {{get options 0}}?</strong>
+    {{/if}}
   </p>
 </div>
 <div class="modal-dialog__footer">
