Introduce single solution answer and clean up code
By introducing a single solution, the code becomes cleaner and it
becomes easier to insert the necessory elements.  This is not to say
that the new code is ideal.  The code with the array was easier to
extend.

This new piece of code helps to ensure that we do not insert a link
when no article was found.  Nice.

--- a/addon/components/editor-plugins/wikipedia-slug-card.hbs
+++ b/addon/components/editor-plugins/wikipedia-slug-card.hbs
@@ -5,12 +5,18 @@
     {{#if this.loading}}
       <br><strong>...looking up articles...</strong>
     {{else}}
-      <strong>Do you want to insert a link to {{get options 0}}?</strong>
+      {{#if this.solution}}
+        <strong>Do you want to insert a link to {{this.solution}}?</strong>
+      {{else}}
+        <strong>No article found for {{@info.term}}</strong>
+      {{/if}}
     {{/if}}
   </p>
 </div>
-<div class="modal-dialog__footer">
-  <WuButtonGroup>
-    <WuButton @label="Yes" @size="small" @isNarrow={{true}} @commandLocation="below" @onClick={{this.insert}} />
-  </WuButtonGroup>
-</div>
+{{#if this.solution}}
+  <div class="modal-dialog__footer">
+    <WuButtonGroup>
+      <WuButton @label="Yes" @size="small" @isNarrow={{true}} @commandLocation="below" @onClick={{this.insert}} />
+    </WuButtonGroup>
+  </div>
+{{/if}}
